<?xml version="1.0" encoding="utf-8"?>
<menu

    xmlns:android="http://schemas.android.com/apk/res/android"
   >

    <group android:checkableBehavior="single">



        <item

            android:id="@+id/page_main"
            android:title="@string/mainn" />

        <item

            android:id="@+id/page_2017"
            android:title="2017" />


        <item

            android:id="@+id/page_2016"
            android:title="2016" />

        <item
            android:id="@+id/page_war"
            android:title="@string/warf" />
        <item
            android:id="@+id/page_humor"
            android:title="@string/comedyf" />

        <item
            android:id="@+id/page_mart"
            android:title="@string/thriler" />

        <item
            android:id="@+id/page_drama"
            android:title="@string/drama" />

        <item
            android:id="@+id/page_dokument"
            android:title="@string/document" />

        <item
            android:id="@+id/page_melodrama"
            android:title="@string/melodrama" />


        <item
            android:id="@+id/page_multfilm"
            android:title="@string/multfilm" />
    </group>


</menu>
