<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"

    tools:context="com.ohanyan.goro.armfilms.film_activity">

    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/youtbue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    </com.google.android.youtube.player.YouTubePlayerView>

    <RelativeLayout
        android:id="@+id/relav1"
        android:layout_below="@id/youtbue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_margin="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/theline"
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:id="@+id/imageView" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:id="@+id/relativeLayout">

            <TextView

                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:text="Կյանք ու կռիվ - The Line"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView

                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView2"
                android:layout_alignLeft="@+id/text1"
                android:layout_alignStart="@+id/text1"
                android:layout_marginBottom="12dp"
                android:text="@string/yearof"
                android:textColor="#dad3d3"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/film_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView"
                android:layout_alignBottom="@+id/textView"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_toEndOf="@+id/textView"
                android:layout_toRightOf="@+id/textView"
                android:text="2017"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <TextView

                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView3"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView"
                android:layout_marginBottom="12dp"
                android:text="@string/country"
                android:textColor="#FFDAD3D3"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/film_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView2"
                android:layout_alignLeft="@+id/film_year"
                android:layout_alignStart="@+id/film_year"
                android:text="Հայաստան"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <TextView

                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textView2"
                android:layout_marginBottom="22dp"
                android:text="@string/category"
                android:textColor="#FFDAD3D3"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/film_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView3"
                android:layout_toEndOf="@+id/textView2"
                android:layout_toRightOf="@+id/textView2"
                android:text="Պատերազմական"
                android:textColor="#ffffff"
                android:textSize="14sp" />


        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_margin="6dp"
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/syuje"
        android:layout_marginTop="5dp">


        <TextView
            android:id="@+id/filmdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ֆիլմը պատմում է 4 ընկերների, որոնց ընկերությունը սկսվել է դեռևս դպրոցական տարիներից, և նրանց 2 քույրերի մասին: Դեպքերը զարգանում են 1990-1992 թվականներին: Ֆիլմում ներկայացված է, թե այդ տարիներին ինչպես են դասավորվել չորս ընկերների և նրանց երկու քույրերի ճակատագրերը: Ֆիլմի 25-ամյա հերոսները, որոնց ընկերությունը ծնվել է դպրոցական տարիներից, ունեցել են տարբեր ճակատագրեր, բայց բոլորի պատմությունը մեկն է՝ Ղարաբաղյան պատերազմը[1][2]:"
            android:textColor="#ffffff"
            android:textSize="16sp" />


    </ScrollView>

    <TextView
        android:layout_marginLeft="6dp"
        android:id="@+id/syuje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relav1"
        android:text="Սյուժե՝"
        android:textColor="#abaeba"
        android:textSize="20sp" />
</RelativeLayout>
